<resources>


    <!--Map-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB5oYDEJWc19e4ZiA82e6SA_gd_RVp1-W0</string>
    <!--Map-->


    <!--Google-->
    <string name="google_sign" templateMergeStrategy="preserve" translatable="false">AIzaSyD8jySiFJSN4-Gua61tN0COC9OPT32EGrE</string>
    <!--Google-->


    <string name="app_name">اسنپ گجت</string>
    <string name="login">ورود</string>
    <string name="sign_in">حساب جدید\\ورود</string>
    <string name="no_internet_connection_text">لطفا از اتصال خود به اینترنت مطمئن شوید</string>
    <string name="no_internet_connection_button">تلاش دوباره</string>
    <string name="log_in_by_mobile">موبایل</string>
    <string name="or">یا</string>
    <string name="email_address">آدرس ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="forget_password">رمز خود را فراموش کرده ام</string>
    <string name="full_name">نام کامل</string>
    <string name="Check_fildes">لطفا همه مشخصات خود را کامل کنید</string>
    <string name="Enter_Your_Phone_Number">لطفا شماره تلفن خود را وارد کنید</string>
    <string name="Enter_Your_Phone_Number_Hint">09000000000</string>
    <string name="Enter_Your_Phone_Number_Done">تایید</string>
    <string name="Plase_wite_Sms">لطفا پس از دریافت پیامک کد را داخل کادر بالا وارد کنید</string>
    <string name="Password_invalde">اعداد وارد شده نا معتبر می باشد</string>
    <string name="number_is_false">شماره ام را اشتباه وارد کرده ام</string>
    <string name="shaps">1234</string>
    <string name="en">English</string>
    <string name="fa">فارسی</string>
    <string name="Home">خانه</string>
    <string name="My_List">لیست من</string>
    <string name="My_profile">حساب من</string>
    <string name="Search">جست و جو</string>
    <string name="pay_money">شارژ حساب</string>


    <!-- ITEMS Start-->
    <string name="Kitchen">آشپزخانه</string>
    <string name="Catering">پذیرایی و مراسمات</string>
    <string name="Medicine_and_Veterinary">پزشکی و دامپزکشی</string>
    <string name="Installations">تاسیسات</string>
    <string name="Transportation">خودرو و حمل و نقل</string>
    <string name="Decoration_and_building">دکوراسیون و ساختمانی</string>
    <string name="Cleaning">شستشو و نظافت</string>
    <string name="Mobile_and_Pc">موبایل و کامپیوتر</string>
    <string name="new_price">سفارش جدید</string>
    <string name="done">انجام شد</string>
    <string name="Back">برگشت</string>
    <string name="to_day">امروز</string>
    <string name="To_Next_Day">فردا</string>
    <string name="Job">کار</string>
    <string name="Phone_Number">شماره تلفن</string>
    <string name="money_now">حساب فعلی</string>
    <string name="Help">راهنما</string>
    <string name="Factor">فاکتورها</string>
    <string name="Share">ارسال</string>
    <string name="Help_App">راهنمای برنامه</string>
    <string name="For_Help">برای کمک از برنامه شما می توانید روی این گزینه کلیک کنید</string>
    <string name="Show_profile">برای مشاهده و تنظیمات حساب کاربری می توانید از این گزینه استفاده کنید</string>
    <string name="Show_list_help">نمایش لیست تمام خدماتی که من از اسنپ گجت گرفتم</string>
    <string name="New_price_help">برای سفارش خدمت جدید می توانید از این گزینه استفاده کنید</string>
    <string name="show_all_factor">برای نمایش فاکتورها می توانید از این گزینه استفاده کنید</string>
    <string name="Items">آیتم ها</string>
    <string name="You_Chosee_A_Item_Of_this_Page">شما می توانید از این صفحه ایتم مورد نظر خودرا انتخاب کنید</string>
    <string name="Report">نظر منفی</string>
    <string name="Like">امتیاز مثبت</string>
    <string name="Call">تماس</string>
    <string name="Themes">طرح ها</string>
    <string name="Pay">شارژ حساب</string>
    <string name="Web_Site">وب سایت</string>
    <string name="Rating">امتیاز دهی به برنامه</string>
    <string name="Send_Request">ارسال نظر</string>
    <string name="Language">زبان</string>
    <string name="color_code">#102030</string>
    <string name="Chosee_color">لطفا رنگ مورد نظر خود را انتخاب کنید</string>
    <!--colors-->
    <string name="Default">پیش فرض</string>
    <string name="Purple">بنفش</string>
    <string name="Blue">آبی</string>
    <string name="Green">سبز</string>
    <string name="Light_Green">سبز روشن</string>
    <string name="Orange">نارنجی</string>
    <string name="Gray">خاکستری</string>
    <!--colors-->
    <string name="exit">خروج</string>
    <string name="Sended">ارسال شد</string>
    <string name="Check_NetWork">لطفا از اتصال خود به اینترنت اتطمینان حاصل فرمایید</string>
    <string name="exit_from_acc">خارج شدن از حساب</string>
    <string name="send_command">دیدگاه خود را فقط با 255 کلمه به ما ارسال کنید</string>
    <string name="defulte_address">آدرس پیش فرض جدید</string>
    <string name="alert">هشدار</string>
    <string name="do_you_are_clear">با این کار آدرس قبلی حذف می شود آیا ادامه می دهید</string>
    <string name="no">بله</string>
    <string name="yes">خیر</string>
    <string name="You_address_saved">آدرس شما ذخیره شد</string>
    <string name="Save_Money">حساب شما</string>
    <string name="title_activity_map_ac">Map</string>
    <string name="use_default_address">استفاده از آدرس پیشفرض</string>
    <string name="next_page">مرحله بعد</string>
    <string name="not_have_default_address">شما در حال حاضر هیچ آدرس پیش فرضی ندارید</string>
    <string name="xadamat">خدمات</string>
    <string name="xadamat_type">نوع خدمات</string>
    <string name="xadamat_type_sub">نوع خدمات اصلی</string>
    <string name="xadamat_Day">تاریخ خدمت</string>
    <string name="xadamat_time">زمان</string>
    <string name="sended_a_pricer">به زودی خدمات مورد نظر برای شما ارسال می شود</string>
    <string name="ok_list">لیست ثبت شده ها</string>
    <string name="Yout_TIme">زمان مورد نظر شما</string>
    <string name="share_app">ارسال برنامه</string>
    <string name="pay">پرداخت</string>
    <string name="toman">تومان</string>
    <string name="how_money">مقدار به تومان</string>
    <string name="end_event">اتمام پرداخت</string>
    <string name="date">انتخاب تاریخ</string>
    <string name="chosee_date">لطفا تاریخ مورد نطر خود را انتخاب کنید</string>
    <string name="profile">پروفایل</string>
    <string name="wite">لطفا چند لحظه صبر کنید...</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="city">شهر محل سکونت</string>
    <string name="not_found">چنین موردی یافت نشد</string>
    <string name="update_btn">به روز رسانی</string>
    <string name="cancel">انصراف</string>
    <string name="det">توضیحات</string>
    <string name="Next_gam">توضیحات</string>
    <string name="update">نسخه مورد استفاده شما نسخه قدیمی می باشد برای به روز رسانی نرم افزار می توانید روی گزینه به روز رسانی را لمس کنید</string>
    <string name="store">فروشگاه</string>
    <string name="money_20">20 هزار تومان</string>
    <string name="money_50">50 هزار تومان</string>
    <string name="money_100">100 هزار تومان</string>
    <string name="you_are_pay_this_ac">شما می توانید حساب کاربری خود را در این صفحه شارژ کنید و از مزایای آن استفاده کنید</string>
    <string name="not_sended">مشکلی در ارسال خدمات برای شما رخ داده است لطفا دوباره تلاش کنید</string>
    <string name="Doen_sended_comment">پیام شما با موفقیت ارسال شد</string>
    <string name="Not_sended_comment">پیام شما با موفقیت ارسال نشد</string>
    <string name="type_name">نام سرویس : </string>
    <string name="time">زمان : </string>
    <string name="cancel_stop">لغو درخواست</string>
    <string name="not_service">متاسفانه هنوز هیچ سرویس کاری خدمت شما را بر عهده نگرفته</string>
    <string name="Snapp_gadget_not_suported">نرم افزار از منطقه ای که انتخاب کردید پشتیبانی نمی کند.</string>
    <string name="is_item_not_avable">چنین آیتمی وجود ندارد</string>
    <string name="my_chats">چت های من</string>
    <string name="this_item_is_null">این بخش برای شما فعلا خالی می باشد</string>


    <string name="taahol">وضعیت تاهل : </string>
    <string name="national_code">کد ملی : </string>
    <string name="birth_day">تاریخ تولد : </string>
    <string name="phone_number"> شماره تلفن : </string>
    <string name="deplom">آخرین مدرک تحصیلی : </string>
    <string name="home_telphone">تلفن منزل : </string>
    <string name="job_telphone">تلفن محل کار : </string>
    <string name="post_code">کد پستی : </string>
    <string name="home_address">آدرس منزل : </string>
    <string name="job_time">کار با نرم افزار : </string>
    <string name="taxasos">تخصص : </string>
    <string name="taxasos_about">درباره تخصص : </string>

    <string name="vazYat">وضعیت</string>
    <string name="user_detailes">درباره کاربر</string>
    <string name="tel_phone_detailes">ارتباطات</string>

    <string name="you_are_shrjed_your_account_in_this_activity">شما می توانید در این صفحه حساب کاربری خود را شارژ کنید و از مزایای شارژ حساب کاربری بهره مند شوید</string>

    <string name="your_shrj">شارژ شما</string>
    <string name="enter_onter">درآمد</string>


    <string name="get_count">تعداد پیشنهاد : </string>


    <string name="send_N_price">ارسال پیشنهاد</string>
    <string name="show_ditalies">مشاهده وضعیت</string>
    <string name="title_activity_show_ditales__n_price_ac">Map</string>
    <string name="Count_prop">تعداد پیشنهاد : </string>

    <string name="done_date">تاریخ ثبت سفارش : </string>
    <string name="yap_date">تاریخ انجام سفارش : </string>
    <string name="question_price_ago">سوالات پیش از سفارش : </string>
    <string name="pricer_text">پیام مشتری : </string>
    <string name="all_props">پیشنهاد های ارسالی برای این سفارش</string>
    <string name="date_prop_send">تاریخ ارسال پیشنهاد : </string>
    <string name="done_your_prop">پیشنهاد شما انتخاب شد</string>
    <string name="your_prop">پیشنهاد شما : </string>
    <string name="wite_for_prop">در انتظار برای انتخاب پیشنهاد توسط مشتری</string>
    <string name="price_is_canceled">سفارش توسط مشتری لغو شد</string>
    <string name="an_other_priced">پیشنهاد متخصص دیگری پذیرفته شده است</string>
    <string name="spicial_prop">پیشنهاد ویژه</string>
    <string name="is_empty">فعلا این آیتم برای شما خالی می باشد</string>
    <string name="chats">چت ها</string>
    <string name="chat_by_prcent">گفتگو با مشتری</string>

    <string name="your_prop_money">مبلغ پیشنهادی شما : </string>
    <string name="your_prop_date">تاریخ پیشنهاد شما : </string>
    <string name="your_prop_text">متن پیشنهادی شما : </string>
    <string name="snapp">اسنپ گجت</string>
    <string name="priceser_counter">سفارش دهنده سرویس </string>
    <string name="message">پیام</string>
    <string name="close">بستن</string>
    <string name="law">قوانین و مقررات</string>

    <string name="your_selected_a_prop">متخصص انتخاب شده است</string>
    <string name="your_is_canceled">این سفارش لغو شده است</string>
    <string name="you_wite_for_prop">گوشی به زنگ اعلام آمادگی متخصص ها باشید</string>

    <string name="see_comment">(مشاهده نظرات)</string>
    <string name="comment">نظر</string>
    <string name="select_prop">انتخاب متخصص</string>
    <string name="cell_by_prop">تماس با متخصص</string>
    <string name="more_ditales">جزيیات بیشتر</string>


</resources>
