<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".themes_ac"
    android:id="@+id/scroll_view_themes_ac"
    android:background="@color/theme0">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_10">














        <!--<include-->
            <!--layout="@layout/header_m_ac"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?actionBarSize"/>-->














        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/Chosee_color"-->
            <!--android:textAlignment="center"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="@dimen/text_view_text_size16"-->
            <!--android:layout_marginBottom="@dimen/margin_10"/>-->








        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/theme_item_not_select"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10" />
















        <!--OR Line Start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/sign_in_top_buttons"
            android:orientation="horizontal"
            android:id="@+id/sign_in_ac_or_line"
            android:layout_marginTop="@dimen/margin_15">



            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#CCC"
                android:layout_below="@id/Log_in_top_buttons"
                android:layout_weight="2"
                android:layout_marginTop="9dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Themes"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_view_text_size10" />



            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#CCC"
                android:layout_below="@id/Log_in_top_buttons"
                android:layout_weight="2"
                android:layout_marginTop="9dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>




        </LinearLayout>
        <!--OR Line End-->






















        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:textDirection="rtl"
            android:layout_margin="@dimen/margin_10">





            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme0"
                android:text="@string/Default"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme1"
                android:text="@string/Purple"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_2"/>


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme2"
                android:text="@string/Blue"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme3"
                android:text="@string/Green"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_4"/>


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme4"
                android:text="@string/Light_Green"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_5"/>


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme5"
                android:text="@string/Orange"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_6"/>


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:backgroundTint="@color/theme6"
                android:text="@string/Gray"
                android:textColor="@color/colorAccent"
                android:onClick="onclick_theme_item"
                android:id="@+id/radio_theme_7"/>




</RadioGroup>













































     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_lay1"
            android:hint="@string/color_code"
            android:textAlignment="center"
            android:layout_marginLeft="@dimen/margin_50"
            android:layout_marginRight="@dimen/margin_50" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@drawable/login_btn_background"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_50"
            android:layout_marginRight="@dimen/margin_50"
            android:foreground="@drawable/ripple" />



    </LinearLayout>




























    </LinearLayout>




</ScrollView>