<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">





















    <!--One Row Start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="onclick_edit_profile_profile_frag"
            android:id="@+id/profile_btn1_profile_context_frag">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/profile_icon_selected"
                    android:textSize="@dimen/text_view_text_size12"/>


            </RelativeLayout>


        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="onclick_pay_btn"
            android:id="@+id/profile_btn2_profile_context_frag">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Pay"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/pay_icon_selected"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn3_profile_context_frag"
            android:onClick="onclick_share_app_btn">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/share_app_icon"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>


        </LinearLayout>






    </LinearLayout>
    <!--One Row End-->









































    <!--Two Row Start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn4_profile_context_frag"
            android:onClick="onclick_start_get_law">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/law"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/law_icon"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn5_profile_context_frag"
            android:onClick="onclick_show_new_address_ac">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defulte_address"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/map_icon"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn6_profile_context_frag"
            android:onClick="onclick_show_command_activity">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Send_Request"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/message_icon"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>


        </LinearLayout>












    </LinearLayout>
    <!--Two Row Start-->
















































    <!--Three Row Start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn7_profile_context_frag"
            android:onClick="onclick_show_web_site">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Web_Site"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/language_icon_color"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn8_profile_context_frag"
            android:onClick="on_click_exit_account">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_from_acc"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/exit_from_account"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/profile_btn9_profile_context_frag"
            android:onClick="onclick_exit_button">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/exit_icon"
                    android:textSize="@dimen/text_view_text_size12"/>

            </RelativeLayout>


        </LinearLayout>












    </LinearLayout>
    <!--Three Row End-->




























</LinearLayout>