<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pay_ac"
    android:background="@color/colorAccent">


    <include
        layout="@layout/header_m_ac"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/header_pay_ac"/>








    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/help_textview_pay_ac"
        android:layout_below="@id/header_pay_ac"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/you_are_pay_this_ac"
        android:textAlignment="center"/>











    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_textview_pay_ac"
        android:layout_margin="@dimen/margin_15"
        android:orientation="horizontal"
        android:layoutDirection="rtl">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/pos"
            android:layout_weight="1"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"/>


    </LinearLayout>











    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@id/header_pay_ac"
        android:layout_margin="@dimen/margin_10"
        android:textAlignment="center"
        android:id="@+id/text_view_header_pay_ac"
        android:textColor="@color/textcolor1"
        android:fontFamily="@font/bk"
        android:textSize="@dimen/text_view_text_size20"
        android:visibility="gone"/>










    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_view_header_pay_ac"
        android:id="@+id/main_panle_pay_ac"
        android:visibility="gone">


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_view_pay_ac"
            android:layoutDirection="rtl"
            android:layout_margin="?actionBarSize"
            android:layout_centerInParent="true" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/margin_50"
            android:layout_marginLeft="@dimen/margin_50"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/bk"
            android:hint="@string/how_money"
            android:textAlignment="center"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:id="@+id/edit_text_money_pay_ac"
            android:visibility="gone"
            android:inputType="number"/>



    </RelativeLayout>

























    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_border_pay"
                android:layout_margin="@dimen/margin_5"
                android:text="@string/money_20"
                android:textSize="14dp"
                android:onClick="onclick_value_button_sharj_card_ac"
                android:id="@+id/button_value_20_sharj_ac"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_border_pay"
                android:layout_margin="@dimen/margin_5"
                android:text="@string/money_50"
                android:textSize="14dp"
                android:onClick="onclick_value_button_sharj_card_ac"
                android:id="@+id/button_value_50_sharj_ac"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_border_pay"
                android:layout_margin="@dimen/margin_5"
                android:text="@string/money_100"
                android:textSize="14dp"
                android:onClick="onclick_value_button_sharj_card_ac"
                android:id="@+id/button_value_100_sharj_ac"/>

        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_pay"
                android:layout_margin="@dimen/margin_5"
                android:padding="9dp"
                android:hint="@string/toman"
                android:textAlignment="center"
                android:textSize="14dp"
                android:inputType="number"
                android:id="@+id/value_edittext_sharj_ac"/>

        </LinearLayout>






        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">





        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"
            android:text="@string/pay"
            android:background="@drawable/button_border_pay_color"
            android:onClick="onclick_pay_button_pay_ac"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_5"
            android:enabled="false"
            android:id="@+id/pay_button_pay_ac"/>





        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"
            android:text="دستی"
            android:background="@color/colorPrimary"
            android:onClick="onclick_change_button_pay_ac"
            android:id="@+id/btn_change_pay_ac"
            android:layout_weight="1"
            android:visibility="gone"/>


    </LinearLayout>



    </LinearLayout>







</RelativeLayout>